--- a/ProjectsStyle.css
+++ b/ProjectsStyle.css
@@ -60,7 +60,7 @@ li a:hover {
 
 #taco_description {
   color: white;
-  font-size: 26px;
+  font-size: 22px;
   margin: 25px auto 50px;
   max-width: 835px;
   padding: 0 15px;
